<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <properties>
        <jdk.version>21</jdk.version>
        <cimpal.version>2025.9.7.1</cimpal.version> <!-- Always sync with version tag -->
        <log4j.version>2.24.1</log4j.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jena.version>5.4.0</jena.version>
        <launch4j.version>2.5.2</launch4j.version>
        <javafx.version>23.0.1</javafx.version>
    </properties>

    <groupId>eu.griddigit.CimPal</groupId>
    <artifactId>CimPal</artifactId>
    <version>2025.9.7.1</version>
    <packaging>pom</packaging>
    <name>CimPal</name>

    <modules>
        <module>CimPal-Core</module>
        <module>CimPal-Main</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <release>${jdk.version}</release>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>